--- a/src/components/banner/banner.pug
+++ b/src/components/banner/banner.pug
@@ -1,11 +1,124 @@
 section.home-banner 
-	.swiper-container 
-		.swiper-wraper 
-			.swiper-slide 
+	.swiper-container
+		.swiper-wrapper
+			.swiper-slide
 				.hero-image
 					img(src="./images/banner/b-1.png", alt="")
-				.shoutout-box 
+				.product-list-slide 
 					ul
-						li 🔥 Miễn phí thường niên khi đăng ký thẻ VISA HDBank
-						li 🛍 Hoàn tiền lên đến 500K khi thanh toán qua thẻ Vietjet VISA
-						li ⭐️ Đăng ký hôm nay - trúng ngay táo xịn. Mở tài khoản 5 phút nhanh chóng
+						li
+							a(href="") 
+								p TK thanh toán
+									br 
+									span eKYC
+								em.lnr.lnr-chevron-right
+						li
+							a(href="") 
+								p 
+									span Mở thẻ 
+									|NAPAS 
+									br
+									|VISA/Master
+								em.lnr.lnr-chevron-right
+						li
+							a(href="") 
+								p 
+									span Vay
+									br
+									|trực tuyến
+								em.lnr.lnr-chevron-right
+
+			.swiper-slide
+				.hero-image
+					img(src="./images/banner/b-2.png", alt="")
+				.product-list-slide 
+					ul
+						li
+							a(href="") 
+								p TK thanh toán
+									br 
+									span eKYC
+								em.lnr.lnr-chevron-right
+						li
+							a(href="") 
+								p 
+									span Mở thẻ 
+									|NAPAS 
+									br
+									|VISA/Master
+								em.lnr.lnr-chevron-right
+						li
+							a(href="") 
+								p 
+									span Vay
+									br
+									|trực tuyến
+								em.lnr.lnr-chevron-right
+
+		.shoutout-box 
+			ul
+				li 🔥 Miễn phí thường niên khi đăng ký thẻ VISA HDBank
+				li 🛍 Hoàn tiền lên đến 500K khi thanh toán qua thẻ Vietjet VISA
+				li ⭐️ Đăng ký hôm nay - trúng ngay táo xịn. Mở tài khoản 5 phút nhanh chóng
+		.card-tool-box 
+			.card-switcher 
+				ul.header-switcher.d-flex.align-center 
+					li 
+						a(href="") Ước tính khoản vay
+					li 
+						a(href="") Quy đổi tỷ giá
+				#panel-1.panel
+					.from-slide-loan
+						.slider-wraper
+							.slide-title 
+								p Số tiền vay
+								input#amount(type='text', readonly='' value="500 Triệu")
+							#slider
+							.label 
+								label(for="") 50 Triệu 
+								label(for="") 1 Tỷ
+						.period-wraper 
+							form(action="") 
+								.form-group 
+									label(for="") Kỳ hạn vay 
+									input.form-control(type="number" name="year" placeholder="5" value='5')
+									span.input-group-addon năm
+								.form-group 
+									label(for="") Trả hàng tháng 
+									input.form-control(type='text' disabled='' value='8.601.944')
+									span.input-suffix đ
+						.btn.btn-continue
+							|Tiếp tục
+						.desc 
+							p Ví dụ: Số tiền vay 500 triệu - chu kỳ trả trong 60 tháng - lãi suất vay 7%/năm - Tổng tiền phải trả 602.476.200đ - Tổng lãi phải trả 102.476.200đ.
+				.from-slide-advise
+					ul.header-advise.d-flex.align-center 
+						li 
+							span.lnr.lnr-arrow-left
+						li 
+							p Đăng ký tư vấn
+					ul.nav-list.d-flex.align-center
+						li 
+							p Số tiền 
+							p 500 triệu 
+						li 
+							p Kỳ hạn vay 
+							p 5 năm
+						li 
+							p Trả mỗi tháng 
+							p 8.601.944
+					form(action="", method="post") 
+						.form-group 
+							span.fas.fa-user
+							input.form-control(type="text" placeholder="Họ và tên")
+						.form-group 
+							span.fas.fa-phone-alt
+							input.form-control(type="text" placeholder="Số điện thoại")
+						.form-group 
+							span.fas.fa-envelope
+							input.form-control(type="text" placeholder="Email")
+
+
+		.swiper-pagination
+
+			
