--- a/src/components/core/button.sass
+++ b/src/components/core/button.sass
@@ -6,7 +6,7 @@
 	vertical-align: middle
 	user-select: none
 	&-toggle
-		margin-left: r(30px)
+		margin-left: 0
 		cursor: pointer
 		position: relative
 		padding: 0
