--- a/src/components/core/_grid.sass
+++ b/src/components/core/_grid.sass
@@ -1,7 +1,7 @@
 $layout: 100% !default
-$container: 1440px !default
+$container: 1240px !default
 $colCount: 12 !default
-$offset: 24px !default
+$offset: 48px !default
 $grid-breakpoints: (sm: 576px, md: 768px, lg: 1024px, xl: 1280px) !default
 $container-breakpoints: (sm: 540px, md: 720px, lg: 960px, xl: 1020px) !default
 
@@ -11,16 +11,16 @@ body
 	margin-right: auto
 
 .container
-	padding-right: $offset * 2
-	padding-left: $offset * 2
+	padding-right: $offset
+	padding-left: $offset
 	margin-left: auto
 	margin-right: auto
 	max-width: 100%
 @media(min-width: 576px)
 	.container
 		max-width: 540px
-		padding-right: $offset*2
-		padding-left: $offset*2
+		padding-right: $offset
+		padding-left: $offset
 @media(min-width: 768px)
 	.container
 		max-width: 720px
@@ -33,8 +33,8 @@ body
 
 .container-fluid
 	width: 100%
-	padding-right: $offset*2
-	padding-left: $offset*2
+	padding-right: $offset
+	padding-left: $offset
 	margin-right: auto
 	margin-left: auto
 
