add code desktop

--- a/src/components/core/title.sass
+++ b/src/components/core/title.sass
@@ -1,33 +1,16 @@
-.sec-title
-	position: relative
-	padding-top: r(50px)
-	padding-bottom: r(40px)
-	margin-bottom: r(47px)
-	.small-title
-		color: #333333
-		font-family: "Kaushan Script"
-		font-size: r(24px)
-		font-weight: 400
-		text-align: center
-	.big-title
-		color: #333333
-		font-size: r(30px)
+.title
+	padding: r(32px) 0
+	text-align: center
+	&_big
+		font-size: r(40px)
+		color: #000
 		font-weight: 700
-		text-align: center
-		text-transform: uppercase
-	&::before
-		position: absolute
-		top: 100%
-		left: 50%
-		transform: translateX(-50%)
-		width: 60px
-		height: 3px
-		content: ''
-		background-color: #f38181
-	@media screen and ( max-width: 768px )
-		padding-bottom: r(20px)
-		margin-bottom: r(30px)
-		.small-title
-			font-size: r(20px)
-		.big-title
-			font-size: r(24px)
+		line-height: 58px
+	&_small
+		font-size: r(32px)
+		font-weight: 800
+		line-height: 120%
+		&-white
+			color: $white
+		&-black
+			color: #000
