--- a/src/components/home/h-4/h-4.pug
+++ b/src/components/home/h-4/h-4.pug
@@ -1,10 +1,44 @@
-section.section.design-sec(setBackground="./images/bg-1.png")
-	.wrapper-container 
-		.sec-title 
-			p.small-title For all devices
-			h3.big-title Unique design
-		.image-center
-			.big-image 
-				img.lazyload(data-src="./images/display_bd.png", alt="")
-			.small-iamge
-				img.lazyload(data-src="./images/display_sm.png", alt="")
+section.section.comparny 
+	.container 
+		h2.title.title_small.title_small-black Khách hàng Doanh nghiệp
+		.row 
+			.col-lg-8
+				.big-image 
+					.swiper-container 
+						.swiper-wrapper
+							-for(i=1; i<6; i++)
+								.swiper-slide
+									.img 
+										img(src="./images/customer-"+i+".png", alt="")
+									.wrapper-content 
+										.desc 
+											a(href="") eCMB - Bộ công cụ số toàn diện dành cho doanh nghiệp
+											p Với quá trình xử lý 100% tự động trực tuyến, ứng dụng mới eDrawdown vừa là một trong những công cụ lõi vừa là mảnh ghép hoàn thiện bộ công cụ số toàn diện của HDBank.
+			.col-lg-4 
+				.row 
+					.col-lg-12 
+						.wrap-content 
+							.icon 
+								img(src="./images/icons/bank.png", alt="")
+							.content 
+								p eCredit - Cấp tín dụng doanh nghiệp online 24/7
+							a.btn.btn-log(href="") Đăng ký
+					.col-lg-6 
+						.icon
+							img(src="./images/icons/phone.png", alt="")
+						.content 
+							p Liên hệ ngay
+							p 
+								span 19006060
+					.col-lg-6 
+						.icon 
+							img(src="./images/icons/list.png", alt="")
+						.content 
+							p Tôi cần tư vấn
+							a.btn.btn-sign(href="") Đăng ký
+			.list-item.d-flex 
+				-for(i=1; i<10; i++)
+					.item 
+						img(src="./images/icons/p-"+i+".png", alt="")
+						p eAccount
+		a.btn.btn-viewmore(href="") Xem thêm
