--- a/src/components/home/h-6/h-6.pug
+++ b/src/components/home/h-6/h-6.pug
@@ -1,16 +1,12 @@
-section.section.slide-mess 
-	.wrapper-container 
-		//- Swiper
-		.mySwiper
-			.swiper-container
-				.swiper-wrapper
-					-for(i=1; i<5; i++)
-						.swiper-slide 
-							.slide-inner 
-								.icon-mess 
-									img(src="./images/icons/chat.png", alt="")
-								.mess-content 
-									p.desc “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
-									p.sign Jon Doe
-				//- .swiper-button-next
-				//- .swiper-button-prev
+section.section.digital-store 
+	.digital-search 
+		.container 
+			form(action="", method="post") 
+				.form-group 
+					span  Happy Digital Store
+					input.form-control(type="text" placeholder="Hôm nay bạn muốn mua gì")
+					button.search-icon(type="submit") 
+						em.fas.fa-search
+	.banner-digital 
+		img.lazyload(data-src="./images/digital-banner.png", alt="")
+	
