--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -1,32 +1,160 @@
-.ui-slider
-	width: 500px
-	margin-top: 30px
-	height: 3.18px
-	background: #eaeaea
-	&.ui-widget.ui-widget-content
-		border: solid 1px transparent !important
-	.ui-slider-range
-		background: $main
-	.ui-slider-handle
+.home-banner
+	position: relative
+	width: 100%
+	.hero-image
+		width: 100%
 		position: relative
-		&.ui-corner-all
-			width: 10px
-			height: 10px
-			display: block
-			border-radius: 50%
-			background: $main
-			&:focus
-				outline: none
-		.tooltip
+		a
+			+img-ratio(552/1440)
+		.product-list-slide
 			position: absolute
-			display: block
-			top: -23px
-			width: 100px
-			height: 29px
-			color: $main
-			font-size: r(14px)
-			&:focus
-				outline: none
+			bottom: 95px
+			ul
+				li
+					margin-bottom: 8px
+					a
+						display: flex
+						align-items: center
+						justify-content: space-between
+						padding: 11px 11px 11px 22px
+						width: 225.5px
+						height: 88px
+						background: rgba(255, 255, 255, 0.7)
+						backdrop-filter: blur(11px)
+						border-radius: 0px 82.5px 82.5px 0px
+						p
+							font-weight: 800
+							font-size: r(22px)
+							line-height: 110%
+							color: #454F5B
+							span
+								color: $main
+						.lnr
+							display: flex
+							align-items: center
+							justify-content: center
+							width: 27.5px
+							height: 27.5px
+							border-radius: 50%
+							margin-left: 10px
+							background: #FFFFFF
+							mix-blend-mode: normal
+							transform: rotate(0deg)
+							color: $main
+							font-size: r(12px)
+							font-weight: 700
+	.shoutout-slide
+		overflow: hidden
+		position: absolute
+		top: 24px
+		left: 50%
+		transform: translateX(-50%)
+		max-width: 1344px
+		background: rgba($color: $main, $alpha: 0.72)
+		// box-shadow: inset -1px -2px 1px rgba(255, 255, 255, 0.25), inset 1px 2px 1px rgba(255, 255, 255, 0.25)
+		backdrop-filter: blur(30px)
+		border-radius: 12px
+		z-index: 99
+		ul
+			padding: 11px 24px
+			width: 100%
+			display: flex
+			align-items: center
+			flex-wrap: nowrap
+			li
+				margin-right: 24px
+				p
+					white-space: nowrap
+					font-weight: 600
+					font-size: r(18px)
+					line-height: 26px
+					color: $white
+.card-tool-box
+	position: absolute
+	padding: 24px
+	bottom: 24px
+	right: 7.9%
+	z-index: 99
+	width: 350px
+	background: rgba(255, 255, 255, 0.6)
+	box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.2)
+	backdrop-filter: blur(80px)
+	border-radius: 20px
+	.card-switcher
+		.header-switcher
+			display: flex
+			flex-direction: row
+			justify-content: space-between
+			align-items: center
+			padding: 8px
+			background: rgba(241, 244, 249, 0.6)
+			box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.05)
+			border-radius: 40px
+			li
+				a
+					padding: 8px 16px
+					border-radius: 40px
+					font-style: normal
+					font-weight: 500
+					font-size: r(14px)
+					line-height: 20px
+					white-space: nowrap
+					color: $black
+					opacity: .4
+				&.active
+					a
+						background: #FFFFFF
+						color: $black
+						opacity: 1
+		.panel
+			.from-slide-loan
+				.slider-wraper
+					.slide-title
+						display: flex
+						align-items: center
+						justify-content: space-between
+						p
+							font-size: r(14px)
+							line-height: 20px
+							color: $black
+						#amount
+							width: 100px
+							border: none
+							background: none
+							color: $main
+							font-weight: 800
+							font-size: r(20px)
+							line-height: 29px
+
+			.ui-slider
+				width: 100%
+				margin-top: 30px
+				height: 3.18px
+				background: #eaeaea
+				&.ui-widget.ui-widget-content
+					border: solid 1px transparent !important
+				.ui-slider-range
+					background: $main
+				.ui-slider-handle
+					position: relative
+					&.ui-corner-all
+						width: 10px
+						height: 10px
+						display: block
+						border-radius: 50%
+						background: $main
+						&:focus
+							outline: none
+					.tooltip
+						position: absolute
+						display: block
+						top: -23px
+						width: 100px
+						height: 29px
+						color: $main
+						font-size: r(14px)
+						&:focus
+							outline: none
 // .card-switcher-wraper
 // 	position: absolute
 // 	z-index: 1000
