--- a/src/components/core/_grid.sass
+++ b/src/components/core/_grid.sass
@@ -1,7 +1,7 @@
 $layout: 100% !default
-$container: 1240px !default
+$container: 100% !default
 $colCount: 12 !default
-$offset: 48px !default
+$offset: 15px !default
 $grid-breakpoints: (sm: 576px, md: 768px, lg: 1024px, xl: 1280px) !default
 $container-breakpoints: (sm: 540px, md: 720px, lg: 960px, xl: 1020px) !default
 
@@ -24,12 +24,18 @@ body
 @media(min-width: 768px)
 	.container
 		max-width: 720px
-@media(min-width: 1024px)
+@media(min-width: 992)
 	.container
 		max-width: 960px
-@media(min-width: 1280px)
+@media(min-width: 1200px)
 	.container
-		max-width: $container + ($offset * 2)
+		max-width: 1140px
+@media(min-width: 1366px)
+	.container
+		max-width: 90vw
+@media(min-width: 1680px)
+	.container
+		max-width: 85vw
 
 .container-fluid
 	width: 100%
