--- a/src/components/global/header/header.pug
+++ b/src/components/global/header/header.pug
@@ -1,8 +1,8 @@
-header
+.nav-top
 	nav
 		.container
 			.nav-full.d-flex.align-center
-				.btn.btn-toggle 
+				#toggle.btn.btn-toggle 
 					span 
 					span 
 					span 
@@ -31,28 +31,30 @@ header
 								span 日本 
 				button.btn.btn-login(type="submit")
 					span Đăng nhập 
-			.nav-toggle 
-				a(href="") 
-					img(src="./images/Logo.png", alt="")
-				.search-box
-					form(action="", method="post") 
-						.form-group
-							input.searchinput(type="text", name="inputSearch")
-							img(src="./images/icons/search.png", alt="")
-				.accordianList
-					.acc-item
-						.acc-title 
-							p Internet banking
-						button(type="submit").btn.btn-login-bar
-							|Đăng nhập
-						a.text-sign(href="") Đăng ký tài khoản
-					.acc-item 
-						.acc-title 
-							p Khách hàng cá nhân 
-							.btn-icon 
-								img.plus(src="./images/icons/plus.png", alt="")
-								img.sub(src="./images/icons/minus.png", alt="")
-						ul.acc-list
+header#nav-toggle
+	.nav-toggle 
+		a.logo(href="") 
+			img(src="./images/Logo.png", alt="")
+		.search-box
+			form(action="", method="post") 
+				.form-group
+					input.searchinput(type="text", name="inputSearch" placeholder="Tìm kiếm")
+					button(type="submit") 
+						img(src="./images/icons/search.png", alt="")
+		.srcoll-bar
+			.login
+				.title 
+					p Internet banking
+				a(href="").btn.btn-login-bar
+					|Đăng nhập
+				a.sign-in(href="") Đăng ký tài khoản
+			.side-navigation-wrap
+				ul.side-navigation
+					li
+						.accordion-title.active
+							a(href='') Khách hàng cá nhân 
+							span
+						ul.nav-sub
 							li
 								a(href="") 
 									.icon 
@@ -83,22 +85,65 @@ header
 									.icon 
 										img(src="./images/icons/bh.svg", alt="")
 									|Bảo hiểm
-					.acc-item 
-						.acc-title 
-							p Khách hàng doanh nghiệp
-							.btn-icon 
-								img.plus(src="./images/icons/plus.png", alt="")
-								img.sub(src="./images/icons/minus.png", alt="")
-					.acc-item 
-						.acc-title 
-							p Khách hàng ưu tiên
-							.btn-icon 
-								img.plus(src="./images/icons/plus.png", alt="")
-								img.sub(src="./images/icons/minus.png", alt="")
-					.acc-item 
-						.acc-title 
-							p Nhà đầu tư
-							.btn-icon 
-								img.plus(src="./images/icons/plus.png", alt="")
-								img.sub(src="./images/icons/minus.png", alt="")
+					li
+						.accordion-title
+							a(href='') Khách hàng doanh nghiệp
+							span
+					li
+						.accordion-title
+							a(href='') Khách hàng ưu tiên 
+							span
+					li
+						.accordion-title
+							a(href='') Nhà đầu tư
+							span
+					li
+						.accordion-title
+							a(href='') Cơ hội nghề nghiệp
+					li
+						.accordion-title
+							a(href='') Câu hỏi thường gặp - FAQ
+						ul.nav-sub.suport
+							li 
+								a(href="tel") 
+									img(src="./images/icons/phone-line.png", alt="")
+									|19006060
+							li 
+								a(href="") 
+									img(src="./images/icons/chat.png", alt="")
+									|Chat hỗ trợ trực tuyến
+							li 
+								a(href="") 
+									img(src="./images/icons/mail-line.png", alt="")
+									|Gửi email
+			.download-app 
+				p Tải app HDBank
+				.icon.d-flex.align-center
+					a(href="") 
+						img(src="./images/chplay.png", alt="")
+					a(href="") 
+						img(src="./images/appstore.png", alt="")
+			.socail-list 
+				p Kết nối với HDBank
+				ul.d-flex.align-center
+					li
+						a(href="") 
+							img(src="./images/icons/face.png", alt="")
+					li
+						a(href="") 
+							img(src="./images/icons/instagram.png", alt="")
+					li
+						a(href="") 
+							img(src="./images/icons/zalo.png", alt="")
+					li
+						a(href="") 
+							img(src="./images/icons/vipper.png", alt="")
+					li
+						a(href="") 
+							img(src="./images/icons/titok.png", alt="")
+					li
+						a(href="") 
+							img(src="./images/icons/twitter.png", alt="")
+				p.copy-right Bản quyền @ 2021 thuộc về HDBank  
+					
 
