--- a/src/components/home/h-1/h-1.pug
+++ b/src/components/home/h-1/h-1.pug
@@ -1,18 +1,19 @@
-section.section.about-sec
-	.wrapper-container 
-		.sec-title 
-			p.small-title What we do
-			h3.big-title Story about us
-		p.sec-desc Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-		.wrapper-content 
-			-for(i=1 ; i<4; i++)
-				.column-md-4 
+section.section.product-hdbank
+	.container 
+		h1.title.title_big  Các sản phẩm tại HDBank
+		.tab-panel 
+			ul.d-flex.align-center
+				li
+					a(href="") 
+						|Cá nhân
+				li
+					a(href="") 
+						|Doanh nghiệp
+			.list-product.d-flex.align-center
+				-for(i=1; i < 9; i++)
 					.item 
-						.item-image 
-							a(href="") 
-								img.lazyload(data-src="./images/super-"+i+".png", alt="")
-						.item-content 
-							.icon 
-								img(src="./images/icons/user.png", alt="")
-							.text 
-								p super team
+						.icon 
+							img(src="./images/icons/pro-"+i+".png", alt="")
+						.content 
+							p Sản phẩm tiền gửi
+			
