--- a/src/components/home/h-2/h-2.pug
+++ b/src/components/home/h-2/h-2.pug
@@ -1,18 +1,55 @@
-section.section.counter-sec
-	.wrapper-container 
-		.conuter-block.d-flex
-			.counter-item
-				p.counter 42
-				p.text Customers
-			.counter-item
-				p.counter 123
-				p.text happy client
-			.counter-item
-				p.counter 15
-				p.text award winner
-			.counter-item
-				p.counter 99
-				p.text cup of coffee
-			.counter-item
-				p.counter 24
-				p.text members
+section.section.card-hdbank 
+	.container 
+		h2.title.title_small.title_small-white Thoải mái mua sắm cùng thẻ HDBank
+		.slider-card.desktop 
+			.swiper-container 
+				.swiper-wrapper 
+					-for(i=1; i<4; i++)
+						.swiper-slide 
+							.slide-inner 
+								a(href="") Thẻ tín dụng 
+								.img-card 
+									img(src="./images/card-"+i+".png", alt="")
+								.title-card 
+									a(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+								a.btn.btn-open-card(href="") Mở thẻ
+			.swiper-button-next 
+			.swiper-button-prev
+			a.btn.btn-view-all(href="") Xem tất cả thẻ
+		.slider-card.hidden
+			.single-slide
+				a(href="") Thẻ tín dụng 
+				.swiper-container
+					.swiper-wrapper 
+						-for(i=1; i<4; i++)
+							.swiper-slide 
+								.slide-inner 
+									.img-card 
+										img(src="./images/card-"+i+".png", alt="")
+									.title-card 
+										a(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+									a.btn.btn-open-card(href="") Mở thẻ
+			.single-slide
+				a(href="") Thẻ tín dụng 
+				.swiper-container
+					.swiper-wrapper 
+						-for(i=1; i<4; i++)
+							.swiper-slide 
+								.slide-inner 
+									.img-card 
+										img(src="./images/card-"+i+".png", alt="")
+									.title-card 
+										a(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+									a.btn.btn-open-card(href="") Mở thẻ
+			.single-slide
+				a(href="") Thẻ tín dụng 
+				.swiper-container
+					.swiper-wrapper 
+						-for(i=1; i<4; i++)
+							.swiper-slide 
+								.slide-inner 
+									.img-card 
+										img(src="./images/card-"+i+".png", alt="")
+									.title-card 
+										a(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+									a.btn.btn-open-card(href="") Mở thẻ
