--- a/src/components/home/h-5/h-5.pug
+++ b/src/components/home/h-5/h-5.pug
@@ -1,35 +1,86 @@
-section.section.service-sec 
-	.wrapper-container 
-		.sec-title 
-			p.small-title Service
-			h3.big-title what we do
-		.sec-desc 
-			p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-		.wrapper-content 
-			.column-md-6 
-				.service-image 
-					img.lazyload(data-src="./images/service.png", alt="")
-			.column-md-6
-				.service-content 
-					ul.side-navigation
-						li
-							.accordion-title
-								img.icon(src="./images/icons/PICTURE.png", alt="")
-								span Photography
-								img.arrow(src="./images/icons/ARROW_DOWN.png", alt="")
-							.side-inner
-								p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						li
-							.accordion-title
-								img.icon(src="./images/icons/EQUALIZER.png", alt="")
-								span creativity
-								img.arrow(src="./images/icons/ARROW_DOWN.png", alt="")
-							.side-inner
-								p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						li
-							.accordion-title
-								img.icon(src="./images/icons/BULLSEYE.png", alt="")
-								span web design
-								img.arrow(src="./images/icons/ARROW_DOWN.png", alt="")
-							.side-inner
-								p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+section.section.banner-innerhome 
+	.swiper-container
+		.swiper-wrapper 
+			.swiper-slide
+				.image
+					img(src="./images/watch.png", alt="")
+				.swiper-inner
+					.slide-title 
+						p.small-text Đăng ký hôm nay
+						p.big-text Rước ngay táo xịn
+					ul.list
+						li 
+							p 
+								span Thời gian: 
+								span 01/11/2021 - 31/12/2021
+						li 
+							p 
+								span Đối tượng: 
+								span Khách hàng mới tại HDBank
+						li 
+							p Tổng giá trị giải thưởng lên đến 
+								span 700 triệu 
+					a.btn.btn-detail(href="") Chi tiết
+			.swiper-slide
+				.image
+					img(src="./images/bike.png", alt="")
+				.swiper-inner
+					.slide-title 
+						p.small-text Gửi tiết kiệm online
+						p.big-text Trúng ngay xế xịn
+					ul.list
+						li 
+							p 
+								span Thời gian: 
+								span 01/11/2021 - 31/12/2021
+						li 
+							p 
+								span Đối tượng: 
+								span Khách hàng mới tại HDBank
+						li 
+							p Tổng giá trị giải thưởng lên đến 
+								span 500 triệu 
+					a.btn.btn-detail(href="") Chi tiết
+		.swiper-button-next 
+		.swiper-button-prev
+
+	.endo-wrap 
+		.title-wrap
+			h2 Ưu đãi cho bạn
+			a.btn.btn-all(href="") Xem tất cả
+		.swiper-container
+			.swiper-wrapper
+				.swiper-slide
+					.slide-inner
+						.brand.red 
+							span shopee
+						.wrap-content 
+							p Miễn phí TIKINOW trong ngày 8/3 khi mua hàng cùng HDBank VISA
+						.date-time 
+							span 07/03/2021 15:32
+				.swiper-slide
+					.slide-inner
+						.brand.blue 
+							span TIKI
+						.wrap-content 
+							p Miễn phí TIKINOW trong ngày 8/3 khi mua hàng cùng HDBank VISA
+						.date-time 
+							span 07/03/2021 15:32
+				.swiper-slide
+					.slide-inner
+						.brand.yellow 
+							span LAZADA
+						.wrap-content 
+							p Miễn phí TIKINOW trong ngày 8/3 khi mua hàng cùng HDBank VISA
+						.date-time 
+							span 07/03/2021 15:32
+				.swiper-slide
+					.slide-inner
+						.brand.red 
+							span sendo
+						.wrap-content 
+							p Miễn phí TIKINOW trong ngày 8/3 khi mua hàng cùng HDBank VISA
+						.date-time 
+							span 07/03/2021 15:32
+			.swiper-button-next
+			.swiper-button-prev
