--- a/src/components/home/h-7/h-7.pug
+++ b/src/components/home/h-7/h-7.pug
@@ -1,33 +1,45 @@
-section.section.ourteam-sec 
-	.wrapper-container 
-		.sec-title 
-			p.small-title Who we are
-			h3.big-title Meet our team
-		.sec-desc 
-			p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-		.wrapper-content 
-			-for(i=1 ; i<4; i++)
-				.column-md-4 
-					.item 
-						.item-image 
-							img.lazyload(data-src="./images/ourteam_"+i+".png", alt="")
-						.item-content 
-							ul.icon.d-flex 
-								li 
-									a(href="") 
-										img(src="./images/icons/facebook.png", alt="")
-								li 
-									a(href="") 
-										img(src="./images/icons/twitter.png", alt="")
-								li 
-									a(href="") 
-										img(src="./images/icons/pinterest.png", alt="")
-								li 
-									a(href="") 
-										img(src="./images/icons/instagram.png", alt="")
-						.item-name 
-							p Christopher Campbell
-							span Graphic Design
-	.logo-partner 
-		.wrapper-container
-			img(src="./images/logo.png", alt="")
+section.section.product-section 
+	.container 
+		.swiper-container
+			.swiper-wrapper
+				-for(i=1; i<10; i++)
+					.swiper-slide
+						.slide-inner
+							.icon 
+								img(src="./images/icons/i-"+i+".png", alt="")
+							.content 
+								p Điện thoại
+			.swiper-button-next
+			.swiper-button-prev 
+		.flash-sale
+			h2.title ⚡️ Flash SALE
+			.flash-flash
+				.swiper-container
+					.swiper-wrapper
+						-for(i=1; i<9; i++)
+							.swiper-slide
+								.item-pro 
+									img.lazyload(data-src="./images/f-"+i+".png", alt="")
+									p.title CASIO GW1000
+									p.price 1.500.000
+					.swiper-button-next
+					.swiper-button-prev
+		.product-hot
+			h2.title 🔥 Sản phẩm HOT
+			.flash-flash
+				.swiper-container
+					.swiper-wrapper
+						-for(i=1; i<5; i++)
+							.swiper-slide
+								.item-pro 
+									img.lazyload(data-src="./images/h-"+i+".png", alt="")
+									p.title iPhone 12 Pro Max with Facetome 256GB Pacifi....
+									p.price 30.999.000
+									.icon 
+										a(href="") 
+											span.lnr.lnr-cart
+										a(href="") 
+											span.lnr.lnr-heart
+					.swiper-button-next
+					.swiper-button-prev
+		a.btn.btn-view-all(href="") Tất cả sản phẩm
