--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -127,10 +127,11 @@
 							line-height: 29px
 
 			.ui-slider
+
 				width: 100%
-				margin-top: 30px
-				height: 3.18px
-				background: #eaeaea
+				height: 8px
+				background: #E7EAF2
+				border-radius: 16px
 				&.ui-widget.ui-widget-content
 					border: solid 1px transparent !important
 				.ui-slider-range
@@ -138,23 +139,14 @@
 				.ui-slider-handle
 					position: relative
 					&.ui-corner-all
-						width: 10px
-						height: 10px
+						width: 32px
+						height: 32px
 						display: block
 						border-radius: 50%
 						background: $main
 						&:focus
 							outline: none
-					.tooltip
-						position: absolute
-						display: block
-						top: -23px
-						width: 100px
-						height: 29px
-						color: $main
-						font-size: r(14px)
-						&:focus
-							outline: none
+
 // .card-switcher-wraper
 // 	position: absolute
 // 	z-index: 1000
