--- a/src/components/core/_grid.sass
+++ b/src/components/core/_grid.sass
@@ -18,24 +18,24 @@ body
 	max-width: 100%
 @media(min-width: 576px)
 	.container
-		max-width: 540px
+		max-width: 540px !important
 		padding-right: $offset
 		padding-left: $offset
 @media(min-width: 768px)
 	.container
-		max-width: 720px
+		max-width: 720px !important
 @media(min-width: 992)
 	.container
-		max-width: 960px
+		max-width: 960px !important
 @media(min-width: 1200px)
 	.container
-		max-width: 1140px
+		max-width: 1140px !important
 @media(min-width: 1366px)
 	.container
-		max-width: 90vw
+		max-width: 90vw !important
 @media(min-width: 1680px)
 	.container
-		max-width: 85vw
+		max-width: 85vw !important
 
 .container-fluid
 	width: 100%
