--- a/src/components/core/_reset.sass
+++ b/src/components/core/_reset.sass
@@ -69,10 +69,7 @@ address
 	line-height: inherit
 
 ol, ul, dl
-	margin-top: 0
-	margin-bottom: 0
-	list-style: none
-	padding: 0
+	list-style: none !important
 
 dt
 	font-weight: 700
@@ -103,11 +100,11 @@ sup
 	top: -.5em
 
 a
-	text-decoration: none
+	text-decoration: none !important
 	background-color: transparent
 	font-size: inherit
 	font-weight: inherit
-	color: inherit
+	color: $black
 
 a:not([href]):not([tabindex])
 	text-decoration: none
