--- a/src/components/home/h-2/h-2.sass
+++ b/src/components/home/h-2/h-2.sass
@@ -1,2 +1,18 @@
 .card-hdbank
-	background: $gradient
+	.single-swiper
+		position: relative
+		.slide-inner
+			padding: 24px
+			width: 394px
+			min-height: 536px
+			background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15))
+			border: 1px solid rgba(255, 255, 255, 0.35)
+			box-sizing: border-box
+			backdrop-filter: blur(20px)
+			border-radius: 20px
+			display: flex
+			flex-direction: column
+			justify-content: center
+			align-items: center
+			.title-card
+				margin-top: 16px
