--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -1,6 +1,17 @@
 .home-banner
 	position: relative
 	width: 100%
+	.swiper-pagination
+		position: absolute
+		left: 24px !important
+		bottom: 32px !important
+		width: fit-content !important
+		&-bullet
+			width: 16px
+			height: 16px
+			background: $white
+			&-active
+				background: $white
 	.hero-image
 		width: 100%
 		position: relative
@@ -10,16 +21,18 @@
 			position: absolute
 			bottom: 95px
 			ul
+				padding-left: 0
 				li
 					margin-bottom: 8px
 					a
+						color: $black !important
 						display: flex
 						align-items: center
 						justify-content: space-between
 						padding: 11px 11px 11px 22px
 						width: 225.5px
 						height: 88px
-						background: rgba(255, 255, 255, 0.7)
+						background-color: rgba(255, 255, 255, 0.7) !important
 						backdrop-filter: blur(11px)
 						border-radius: 0px 82.5px 82.5px 0px
 						p
@@ -37,12 +50,18 @@
 							height: 27.5px
 							border-radius: 50%
 							margin-left: 10px
-							background: #FFFFFF
+							background: $white
 							mix-blend-mode: normal
 							transform: rotate(0deg)
 							color: $main
 							font-size: r(12px)
 							font-weight: 700
+							transition: all .5s ease-in-out
+					&:hover
+						a
+							.lnr
+								background: $main
+								color: $white
 	.shoutout-slide
 		overflow: hidden
 		position: absolute
@@ -56,14 +75,16 @@
 		border-radius: 12px
 		z-index: 99
 		ul
-			padding: 11px 24px
+			padding: 11px 24px !important
 			width: 100%
 			display: flex
 			align-items: center
 			flex-wrap: nowrap
+			margin: 0 !important
 			li
 				margin-right: 24px
 				p
+					margin-bottom: 0 !important
 					white-space: nowrap
 					font-weight: 600
 					font-size: r(18px)
@@ -82,42 +103,44 @@
 	border-radius: 20px
 	.card-switcher
 		.header-switcher
+			margin-bottom: 16px
 			display: flex
 			flex-direction: row
 			justify-content: space-between
 			align-items: center
-			padding: 8px
+			padding: 8px !important
 			background: rgba(241, 244, 249, 0.6)
 			box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.05)
 			border-radius: 40px
 			li
-				a
-					padding: 8px 16px
-					border-radius: 40px
-					font-style: normal
-					font-weight: 500
-					font-size: r(14px)
-					line-height: 20px
-					white-space: nowrap
-					color: $black
-					opacity: .4
+				padding: 8px 16px
+				border-radius: 40px
+				font-style: normal
+				font-weight: 500
+				font-size: r(14px)
+				line-height: 20px
+				white-space: nowrap
+				color: $black
+				opacity: .4
+				cursor: pointer
 				&.active
-					a
-						background: #FFFFFF
-						color: $black
-						opacity: 1
+					background: $white
+					color: $black
+					opacity: 1
 		.panel
+			display: none
 			.from-slide-loan
-				.slider-wraper
-					.slide-title
+				form
+					.form-group
+						margin-bottom: 12px
 						display: flex
 						align-items: center
 						justify-content: space-between
-						p
+						label
 							font-size: r(14px)
 							line-height: 20px
 							color: $black
-						#amount
+						input#amount
 							width: 100px
 							border: none
 							background: none
@@ -125,9 +148,8 @@
 							font-weight: 800
 							font-size: r(20px)
 							line-height: 29px
-
 			.ui-slider
-
+				position: relative
 				width: 100%
 				height: 8px
 				background: #E7EAF2
@@ -139,16 +161,240 @@
 				.ui-slider-handle
 					position: relative
 					&.ui-corner-all
+						position: absolute
+						top: -13px
+						left: 0
 						width: 32px
 						height: 32px
 						display: block
 						border-radius: 50%
-						background: $main
+						background: $white
+						&::after
+							position: absolute
+							top: 50%
+							left: 50%
+							content: ''
+							width: 22px
+							height: 22px
+							border-radius: 50%
+							background: $main
+							transform: translate(-50%, -50%)
 						&:focus
 							outline: none
+			.range-slider__label
+				margin-top: 16px
+				margin-bottom: 16px
+				display: flex
+				align-items: center
+				justify-content: space-between
+			.period-wraper
+				table
+					width: 100%
+					tr
+						td
+							text-align: center
+						&:first-child
+							td
+								font-size: r(12px)
+								line-height: 18px
+								text-align: center
+								color: #333333
+								padding-bottom: 8px
+						&:last-child
+							td
+								width: 50%
+								input
+									width: 100%
+									height: 40px
+									background: #FFFFFF
+									border-radius: 40px
+									border: none
+								&:first-child
+									position: relative
+									padding-right: 6px
+									input
+										font-size: r(14px)
+										padding-left: 50px
+									.qty-minus,
+									.qty-plus,
+									.input-group-addon
+										position: absolute
+										top: 50%
+										cursor: pointer
+										display: flex
+										align-items: center
+										transform: translateY(-50%)
+									.qty-minus
+										left: 13px
+									.qty-plus
+										right: 13px
+									.input-group-addon
+										right: 35%
+										font-size: r(14px)
+								&:last-child
+									position: relative
+									padding-left: 6px
+									input
+										text-align: center
+									.input-suffix
+										position: absolute
+										top: 50%
+										right: 15%
+										transform: translateY(-50%)
+			.btn-login
+				width: 100%
+				height: 42px
+				padding: 8px 24px !important
+				margin-top: 28px
+				span
+					font-size: r(18px)
+				&::after
+					display: flex
+					align-items: center
+					right: calc( 100% - 40% )
+				&:hover
+					&::after
+						right: 30%
+			.desc
+				p
+					font-size: 12px
+					line-height: 18px
+					color: #333333
+					opacity: 0.5
+					flex: none
+					order: 4
+					align-self: stretch
+					margin: 16px 0px
+			form
+				margin-top: 29px
+				.form-group
+					align-items: center
+					margin-bottom: 16px
+					.input-slect
+						display: flex
+						flex-direction: row
+						align-items: center
+						padding: 8px 8px 8px 16px
+						width: 116px
+						height: 40px
+						background: #F9FAFC
+						border-radius: 40px
+						flex-grow: 0
+						margin-right: 8px
+						select
+							padding: 0 !important
+							border: none
+							background: $tran !important
+					.input-value
+						padding: 8px 16px
+						width: 175px
+						height: 40px
+						background: #F9FAFC
+						border-radius: 40px
+						flex: none
+						align-self: stretch
+						flex-grow: 1
+						input
+							width: 100%
+							border: none
+							background-color: $tran
+					&:last-child
+						margin-bottom: 20px
+			.table-box
+				max-width: 240px
+				margin: 0 auto
+				table
+					width: 100%
+					tr
+						td
+							line-height: 18px
+							font-size: r(12px)
+							span
+								padding-left: 10px
 
-// .card-switcher-wraper
-// 	position: absolute
-// 	z-index: 1000
-// 	top: 50%
-// 	left: 200px
+						&:first-child
+							border-bottom: 1px dashed #B6BEC8
+							td
+								padding-bottom: 16px
+						&:nth-child(2)
+							td
+								padding: 17px 0
+				.desc
+					text-align: center
+					padding: 0 r(20px)
+
+			&.active
+				display: block
+	.from-slide-advise
+		display: none
+		width: 100%
+		height: 100%
+		.header-advise,
+		.nav-list
+			padding-left: 0
+		.header-advise
+			justify-content: space-between
+			margin-bottom: 45px
+			li
+				.lnr
+					display: flex
+					align-items: center
+					justify-content: center
+					width: 40px
+					height: 40px
+					border-radius: 50%
+					background-color: #E7EAF2
+					font-size: r(18px)
+					font-weight: 700
+				p
+					margin-bottom: 0
+					font-size: r(18px)
+					font-weight: 700
+		.nav-list
+			justify-content: space-between
+			li
+				text-align: center
+				p
+					margin-bottom: 0
+					&:first-child
+						font-size: r(14px)
+						color: $black
+						opacity: .4
+				&:first-child
+					p
+						&:last-child
+							color: $main
+							font-weight: 700
+		form
+			.form-group
+				position: relative
+				padding: 8px 8px 8px 16px
+				width: 100%
+				margin-bottom: 16px
+				border-radius: 40px
+				background-color: $white
+				span
+					position: absolute
+					top: 50%
+					left: 10px
+					transform: translateY(-50%)
+
+				.form-control
+					border: none
+					background-color: $tran
+					padding-left: 20px
+			.btn-login
+				width: 100%
+				height: 42px
+				padding: 0 !important
+				span
+					font-size: r(18px)
+				&::after
+					display: flex
+					align-items: center
+					right: calc( 100% - 40% )
+				&:hover
+					&::after
+						right: 30%
+		&.active
+			display: block
