--- a/src/components/core/button.sass
+++ b/src/components/core/button.sass
@@ -5,6 +5,7 @@
 	white-space: nowrap
 	vertical-align: middle
 	user-select: none
+	padding: 0 !important
 	&-toggle
 		margin-left: 0
 		cursor: pointer
@@ -54,24 +55,23 @@
 		// 			top: 18px
 		// 			width: 0%
 		// 			left: 50%
-		@media screen and ( min-width: 768px )
-			display: block
+
 	&-login
 		position: relative
-		min-width: 176px
+		width: 176px
+		height: 58px
 		display: flex
 		align-items: center
-		border-radius: 50px
+		border-radius: 50px !important
 		border: none
-		background: $yellow
-		padding: 16px 24px 16px 24px
+		background-color: $yellow !important
+		padding: 16px 24px 16px 24px !important
 		transition: all ease-in-out .5s
 		span
 			display: block
 			margin-left: 20px
 			font-size: r(18px)
 			font-weight: 700
-			line-height: 26px
 			transition: all ease-in-out .5s
 		&::after
 			position: absolute
@@ -85,10 +85,26 @@
 			transition: all ease-in-out .5s
 
 		&:hover
-			background: $main
+			background-color: $main !important
 			span
 				color: $white
 				margin-left: 0
 			&::after
 				right: 16px
 				color: $white
+	&-login-bar
+		padding: r(8px) r(24px) !important
+		width: 100%
+		background-color: $yellow !important
+		border-radius: 50px !important
+		align-self: stretch
+		font-weight: 500 !important
+		font-size: r(18px) !important
+		line-height: 26px
+		color: $black !important
+		transition: all ease-in-out .5s !important
+		display: block
+		margin-bottom: 20px
+		&:hover
+			color: $white !important
+			background-color: $main !important
