--- a/src/components/home/h-1/h-1.pug
+++ b/src/components/home/h-1/h-1.pug
@@ -1,19 +1,18 @@
 section.section.product-hdbank
 	.container 
 		h1.title.title_big  Các sản phẩm tại HDBank
-		.tab-panel 
-			ul.d-flex.align-center
-				li
-					a(href="") 
-						|Cá nhân
-				li
-					a(href="") 
-						|Doanh nghiệp
-			.list-product.d-flex.align-center
-				-for(i=1; i < 9; i++)
-					.item 
-						.icon 
-							img(src="./images/icons/pro-"+i+".png", alt="")
-						.content 
-							p Sản phẩm tiền gửi
+		ul#list.d-flex.align-center
+			li.active
+				a(href="") 
+					|Cá nhân
+			li
+				a(href="#sec-4") 
+					|Doanh nghiệp
+		.list-product.d-flex.align-center
+			-for(i=1; i < 9; i++)
+				.item 
+					.icon 
+						img(src="./images/icons/pro-"+i+".png", alt="")
+					.content 
+						p Sản phẩm tiền gửi
 			
