--- a/src/components/home/h-1/h-1.sass
+++ b/src/components/home/h-1/h-1.sass
@@ -1,79 +1,41 @@
-.about-sec
-	.sec-desc
-		max-width: 954px
-		margin: 0 auto
-		padding-bottom: r(101px)
-		color: #999999
-		font-size: r(15px)
-		font-weight: 400
-		line-height: 24px
-		text-align: center
-	.item
-		position: relative
-		.item-image
-			transition: all .5s
-			+img-ratio(250/380)
-			&::after
-				content: ''
-				position: absolute
-				top: 50%
-				left: 50%
-				width: 100%
-				height: 100%
-				opacity: 0
-				visibility: hidden
-				z-index: 2
-				pointer-events: none
-				transition: all .5s
-				transform: translate(-50%, -50%)
-				background-color: #000000
-				background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%)
-		.item-content
-			position: absolute
-			top: 50%
-			left: 50%
-			z-index: 3
-			display: flex
-			visibility: hidden
-			opacity: 0
-			align-items: center
-			flex-direction: column
-			transition: all .5s
-			transform: translate(-50%, -50%)
-			.icon
-				margin-bottom: r(10px)
-			.text
-				p
-					color: #ffffff
-					font-size: r(18px)
-					font-weight: 700
-					text-align: center
-					text-transform: uppercase
-		&::before
-			content: ''
-			position: absolute
-			top: 50%
-			left: 50%
-			width: 100%
-			height: 100%
-			transform: translate(-50%, -50%)
-			background-color: #95e1d3
-		@media screen and ( min-width: 1025px )
+.product-hdbank
+	ul
+		justify-content: center
+		padding-left: 0
+		margin-bottom: 48px
+		li
+			a
+				padding: 14px 50.4px
+				background: #FFFFFF
+				border: 1.4px solid #B1B5C9
+				box-sizing: border-box
+				border-radius: 0px 12px 12px 0px
+				font-weight: 800
+				font-size: r(19.6px)
+				line-height: 29px
+				color: $black
+				transition: all ease-in-out .5s
+			&:first-child
+				a
+					border-radius: 12px 0px 0px 12px
 			&:hover
-				.item-image
-					transform: translate(-10px, -10px)
-					&::after
-						opacity: .9
-						visibility: visible
-				.item-content
-					opacity: 1
-					visibility: visible
-		@media screen and ( max-width: 768px )
-			margin-bottom: 30px
-			.item-image
-				&::after
-					opacity: .9
-					visibility: visible
-			.item-content
-				opacity: 1
-				visibility: visible
+				a
+					background: $yellow
+			&.active
+				a
+					color: $white
+					background: $main
+	.list-product
+		justify-content: space-between
+		.item
+			text-align: center
+			.icon
+				margin-bottom: 12px
+			.content
+				padding: 0 30px
+				p
+					font-weight: 500
+					font-size: 16px
+					line-height: 23px
+					text-align: center
+					color: #000000
