--- a/src/components/home/h-4/h-4.pug
+++ b/src/components/home/h-4/h-4.pug
@@ -1,4 +1,4 @@
-section.section.comparny 
+section.section.comparny#sec-4 
 	.container 
 		h2.title.title_small.title_small-black Khách hàng Doanh nghiệp
 		.row 
