--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -25,6 +25,7 @@ html(lang="en")
 		script.
 			LazyLoad.css([
 				'./css/plugins.min.css',
+				'//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css',
 				'https://cdn.linearicons.com/free/1.0.0/icon-font.min.css',
 				'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css',
 				'https://fonts.googleapis.com/icon?family=Material+Icons',
