--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -127,6 +127,8 @@
 					background: $white
 					color: $black
 					opacity: 1
+			@media screen and ( max-width: 1365.98px )
+				margin-bottom: 0
 		.panel
 			display: none
 			.from-slide-loan
