--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -32,7 +32,7 @@
 						padding: 11px 11px 11px 22px
 						width: 225.5px
 						height: 88px
-						background-color: rgba(255, 255, 255, 0.7) !important
+						background-color: rgba(255, 255, 255, 0.7)
 						backdrop-filter: blur(11px)
 						border-radius: 0px 82.5px 82.5px 0px
 						p
@@ -59,10 +59,11 @@
 							transition: all .5s ease-in-out
 					&:hover
 						a
+							background-color: $white
 							.lnr
 								background: $main
 								color: $white
-	.shoutout-slide
+	.ticker-wrap
 		overflow: hidden
 		position: absolute
 		top: 24px
@@ -70,26 +71,29 @@
 		transform: translateX(-50%)
 		max-width: 1344px
 		background: rgba($color: $main, $alpha: 0.72)
-		// box-shadow: inset -1px -2px 1px rgba(255, 255, 255, 0.25), inset 1px 2px 1px rgba(255, 255, 255, 0.25)
 		backdrop-filter: blur(30px)
 		border-radius: 12px
 		z-index: 99
-		ul
-			padding: 11px 24px !important
+		.ticker
+			padding: 11px 24px
 			width: 100%
 			display: flex
 			align-items: center
 			flex-wrap: nowrap
-			margin: 0 !important
-			li
+			&__item
 				margin-right: 24px
-				p
-					margin-bottom: 0 !important
-					white-space: nowrap
-					font-weight: 600
-					font-size: r(18px)
-					line-height: 26px
-					color: $white
+				white-space: nowrap
+				font-weight: 600
+				font-size: r(18px)
+				color: $white
+		@media screen and ( max-width: 1366px )
+			top: 15px
+			max-width: 1024px
+			.ticker
+				padding: 8px 15px !important
+				&__item
+					font-size: r(14px)
+
 .card-tool-box
 	position: absolute
 	padding: 24px
@@ -127,7 +131,7 @@
 					background: $white
 					color: $black
 					opacity: 1
-			@media screen and ( max-width: 1365.98px )
+			@media screen and ( max-width: 1366px )
 				margin-bottom: 0
 		.panel
 			display: none
@@ -150,6 +154,8 @@
 							font-weight: 800
 							font-size: r(20px)
 							line-height: 29px
+						@media screen and ( max-width: 1366px )
+							margin-bottom: 8px
 			.ui-slider
 				position: relative
 				width: 100%
@@ -189,6 +195,9 @@
 				display: flex
 				align-items: center
 				justify-content: space-between
+				@media screen and ( max-width: 1366px )
+					margin-top: 6px
+					margin-bottom: 6px
 			.period-wraper
 				table
 					width: 100%
@@ -257,6 +266,8 @@
 				&:hover
 					&::after
 						right: 30%
+				@media screen and ( max-width: 1366px )
+					margin-top: 8px
 			.desc
 				p
 					font-size: 12px
@@ -267,7 +278,9 @@
 					order: 4
 					align-self: stretch
 					margin: 16px 0px
-			form
+					@media screen and ( max-width: 1366px )
+						margin: 8px 0
+			.calculator
 				margin-top: 29px
 				.form-group
 					align-items: center
@@ -302,6 +315,12 @@
 							background-color: $tran
 					&:last-child
 						margin-bottom: 20px
+				@media screen and ( max-width: 1365.98px )
+					margin-top: 8px
+					.form-group
+						margin-bottom: 8px
+						&:last-child
+							margin-bottom: 8px
 			.table-box
 				max-width: 240px
 				margin: 0 auto
@@ -318,9 +337,13 @@
 							border-bottom: 1px dashed #B6BEC8
 							td
 								padding-bottom: 16px
+								@media screen and ( max-width: 1366px )
+									padding-bottom: 8px
 						&:nth-child(2)
 							td
 								padding: 17px 0
+								@media screen and ( max-width: 1366px )
+									padding: 15px 0
 				.desc
 					text-align: center
 					padding: 0 r(20px)
@@ -367,7 +390,7 @@
 						&:last-child
 							color: $main
 							font-weight: 700
-		form
+		.from-slide
 			.form-group
 				position: relative
 				padding: 8px 8px 8px 16px
