--- a/src/components/global/footer/footer.pug
+++ b/src/components/global/footer/footer.pug
@@ -1,82 +1,84 @@
 footer 
 	.container 
-		.footer-container.d-flex
-			.infor-box
-				a.logo-footer(href="") 
-					img(src="./images/Logo.png", alt="")
-				ul
-					li 
-						img(src="./images/icons/location.svg", alt="")
-						|25Bis Nguyễn Thị Minh Khai, P. Bến Nghé, Quận 1, TP. Hồ Chí Minh
-					li 
-						img(src="./images/icons/phone.svg", alt="")
-						|19006060
-					li 
-						img(src="./images/icons/email.svg", alt="")
-						|info.@hdbank.com.vn
-					li 
-						|Fax: (028) 62 915 900
-					li 
-						|SWIFT code: HDBCVNVX 
-			.menu-box.d-flex
-				.menu-list 
-					.title 
-						p Vì sao chọn HDBank?
+		.row 
+			.col-lg-3
+				.infor-box
+					a.logo-footer(href="") 
+						img(src="./images/Logo.png", alt="")
 					ul
-						li
-							a(href="") Về chúng tôi
-						li
-							a(href="") Tuyển dụng
-						li
-							a(href="") Ưu đãi
-						li
-							a(href="") Tin tức và sự kiện
-						li
-							a(href="") Thư viện
-				.menu-list 
-					.title 
-						p Khách hàng cá nhân
-					ul
-						li
-							a(href="") Sản phẩm tiền gửi
-						li
-							a(href="") Sản phẩm Vay
-						li
-							a(href="") Thẻ
-						li
-							a(href="") Bảo hiểm
-						li
-							a(href="") Ngân hàng điện tử
-				.menu-list 
-					.title 
-						p Khách hàng doanh nghiệp
-					ul
-						li
-							a(href="") Tín dụng
-						li
-							a(href="") Thẻ doanh nghiệp
-						li
-							a(href="") Quản lý dòng tiền
-						li
-							a(href="") Tài trợ thương mại
-						li
-							a(href="") Thanh toán quốc tế
-				.menu-list 
-					.title 
-						p Hỗ trợ
-					ul
-						li
-							a(href="") Hotline
-						li
-							a(href="") Chat trực tuyến
-						li
-							a(href="") Trung tâm trợ giúp
-						li
-							a(href="") Bảo mật
+						li 
+							img(src="./images/icons/location.svg", alt="")
+							|25Bis Nguyễn Thị Minh Khai, P. Bến Nghé, Quận 1, TP. Hồ Chí Minh
+						li 
+							img(src="./images/icons/phone.svg", alt="")
+							|19006060
+						li 
+							img(src="./images/icons/email.svg", alt="")
+							|info.@hdbank.com.vn
+						li 
+							|Fax: (028) 62 915 900
+						li 
+							|SWIFT code: HDBCVNVX 
+			.col-lg-9
+				.menu-box.d-flex
+					.menu-list 
+						.footer-infor_tile
+							span Vì sao chọn HDBank?
+						ul
+							li
+								a(href="") Về chúng tôi
+							li
+								a(href="") Tuyển dụng
+							li
+								a(href="") Ưu đãi
+							li
+								a(href="") Tin tức và sự kiện
+							li
+								a(href="") Thư viện
+					.menu-list 
+						.footer-infor_tile
+							span Khách hàng cá nhân
+						ul
+							li
+								a(href="") Sản phẩm tiền gửi
+							li
+								a(href="") Sản phẩm Vay
+							li
+								a(href="") Thẻ
+							li
+								a(href="") Bảo hiểm
+							li
+								a(href="") Ngân hàng điện tử
+					.menu-list 
+						.footer-infor_tile
+							span Khách hàng doanh nghiệp
+						ul
+							li
+								a(href="") Tín dụng
+							li
+								a(href="") Thẻ doanh nghiệp
+							li
+								a(href="") Quản lý dòng tiền
+							li
+								a(href="") Tài trợ thương mại
+							li
+								a(href="") Thanh toán quốc tế
+					.menu-list 
+						.footer-infor_tile
+							span Hỗ trợ
+						ul
+							li
+								a(href="") Hotline
+							li
+								a(href="") Chat trực tuyến
+							li
+								a(href="") Trung tâm trợ giúp
+							li
+								a(href="") Bảo mật
 		.footer-coppyright 
 			ul.coppyright.d-flex
 				li
-					p Bản quyền ©2021 thuộc về HDBank  
+					span Bản quyền ©2021 thuộc về HDBank  
 				li
 					a(href="") Điều khoản sử dụng
 				li
@@ -85,7 +87,7 @@ footer
 					a(href="") Sơ đồ trang
 		.footer-bottom.d-flex.justify-between
 			.download-app 
-				p Tải app HDBank
+				span Tải app HDBank
 				ul.d-flex
 					li
 						a(href="") 
@@ -94,7 +96,7 @@ footer
 						a(href="") 
 							img(src="./images/appstore.png", alt="")
 			.socail-box 
-				p Kết nối với HDBank
+				span Kết nối với HDBank
 				ul.d-flex
 					li
 						a(href="") 
