--- a/src/components/global/footer/footer.sass
+++ b/src/components/global/footer/footer.sass
@@ -1,1 +1,87 @@
-
+footer
+	padding: 56px 0
+	background: linear-gradient(0deg, #F4F4F4, #F4F4F4)
+	.infor-box
+		padding-right: 50px
+		.logo-footer
+			display: block
+			margin-bottom: 32px
+		ul
+			padding-left: 0
+			li
+				display: flex
+				align-items: flex-start
+				padding: 5px 0
+				font-weight: normal
+				font-size: 14px
+				line-height: 20px
+				color: $black
+				img
+					padding-top: 3px
+					margin-right: 10px
+	.menu-box
+		align-items: flex-start
+		.menu-list
+			padding-top: 40px
+			margin-left: 64px
+			.footer-infor_tile
+				margin-bottom: 8px
+				span
+					font-weight: 800
+					font-size: r(14px)
+					line-height: 20px
+					color: $black
+			ul
+				padding-left: 0
+				li
+					padding: 8px 0
+					a
+						color: $black
+						font-size: r(14px)
+			&:first-child
+				margin-left: auto
+	.footer-coppyright
+		margin-top: 32px
+		margin-bottom: 48px
+		.coppyright
+			width: 100%
+			border-top: 1px solid rgba($color: $black, $alpha: .2)
+			border-bottom: 1px solid rgba($color: $black, $alpha: .2)
+			padding: 32px 0
+			justify-content: center
+			li
+				padding: 0 13.5px
+				border-left: solid 1px rgba($color: $black, $alpha: .2)
+				a,
+				span
+					font-size: r(14px)
+					line-height: 20px
+					color: $black
+				&:first-child
+					padding-left: 0
+					border-left: none
+	.footer-bottom
+		.download-app,
+		.socail-box
+			span
+				font-weight: bold
+				font-size: r(14px)
+				line-height: 20px
+				color: $black
+				margin-bottom: 8px
+				display: block
+		.download-app
+			ul
+				align-items: center
+				padding-left: 0
+				li
+					margin-right: 16px
+		.socail-box
+			span
+				text-align: right
+			ul
+				padding-left: 0
+				li
+					margin-left: 6px
+					&:first-child
+						margin-left: 0
