--- a/src/components/global/header/header.pug
+++ b/src/components/global/header/header.pug
@@ -10,17 +10,13 @@
 					span
 				a.logo(href="")
 					img(src="./images/Logo.png", alt="")
-				.language 
+				.language
 					.lang-active.d-flex.align-center
 						a(href="") 
 							img(src="./images/icons/vn.png", alt="")
-						.button-click 
+						#click-toggle.button-click 
 							img(src="./images/icons/down.png", alt="")
 					ul.drop-down
-						li 
-							a(href="") 
-								img(src="./images/icons/vn.png", alt="")
-								span vn
 						li 
 							a(href="") 
 								img(src="./images/icons/en.png", alt="")
@@ -50,11 +46,11 @@ header#nav-toggle
 				a.sign-in(href="") Đăng ký tài khoản
 			.side-navigation-wrap
 				ul.side-navigation
-					li
-						.accordion-title.active
+					li.active
+						.accordion-title
 							a(href='') Khách hàng cá nhân 
-							span
-						ul.nav-sub
+							em
+						ul.nav-sub.show
 							li
 								a(href="") 
 									.icon 
@@ -88,15 +84,46 @@ header#nav-toggle
 					li
 						.accordion-title
 							a(href='') Khách hàng doanh nghiệp
-							span
+							em
+						ul.nav-sub
+							li
+								a(href="") 
+									.icon 
+										img(src="./images/icons/money.svg", alt="")
+									|Tiền gửi
+							li
+								a(href="") 
+									.icon 
+										img(src="./images/icons/card-1.svg", alt="")
+									|Thẻ thanh toán
+							li
+								a(href="") 
+									.icon 
+										img(src="./images/icons/card-2.svg", alt="")
+									|Thẻ tín dụng
+							li
+								a(href="") 
+									.icon 
+										img(src="./images/icons/money.svg", alt="")
+									|Sản phẩm vay
+							li
+								a(href="") 
+									.icon 
+										img(src="./images/icons/save.svg", alt="")
+									|Tiết kiệm
+							li
+								a(href="") 
+									.icon 
+										img(src="./images/icons/bh.svg", alt="")
+									|Bảo hiểm
 					li
 						.accordion-title
 							a(href='') Khách hàng ưu tiên 
-							span
+							em
 					li
 						.accordion-title
 							a(href='') Nhà đầu tư
-							span
+							em
 					li
 						.accordion-title
 							a(href='') Cơ hội nghề nghiệp
