--- a/src/components/global/header/header.sass
+++ b/src/components/global/header/header.sass
@@ -9,13 +9,58 @@
 				margin-right: 27px
 			.logo
 			.language
+				position: relative
+				width: 117px
+				height: 58px
+				border-radius: 40px
 				margin-left: auto
+				padding: 12px 16px 12px 12px
+				transition: all ease-in-out .3s
 				.lang-active
+					justify-content: center
 					.button-click
 						margin-left: 13px
 						cursor: pointer
+						transform: rotate(0deg)
 				.drop-down
-					display: none
+					opacity: 0
+					visibility: hidden
+					position: absolute
+					top: 60%
+					left: -10px
+					padding-left: 0
+					z-index: 999
+					padding: 12px 16px 12px 12px
+					position: relative
+					width: 117px
+					height: 92px
+					background: #FFFFFF
+					box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.05)
+					border-radius: 20px
+					transition: all ease-in-out .5s
+					li
+						a
+							padding: 6px 0
+							display: flex
+							span
+								margin-left: 8px
+								font-weight: bold
+								font-size: r(18px)
+								line-height: 26px
+								color: #000000
+				&.active
+					border: 1px solid $gray
+					background: #e7eaf2
+					box-shadow: 0px 14px 40px rgba(33, 43, 54, 0.1)
+					.lang-active
+						.button-click
+							transform: rotate(180deg)
+					.drop-down
+						opacity: 1
+						visibility: visible
+				&:hover
+					background: #e7eaf2
+					box-shadow: 0px 14px 40px rgba(33, 43, 54, 0.1)
 			.btn-login
 				margin-left: 50px
 header
@@ -117,17 +162,16 @@ header
 								font-size: 1rem
 								line-height: 23px
 								color: $black !important
-							span
+							em
+								cursor: pointer
 								&::after
+									font-style: normal
 									content: '\e145'
 									font-family: 'Material Icons'
 									font-size: r(18px)
 									font-weight: 500
-							&.active
-								span
-									&::after
-										content: '\e15b'
 						.nav-sub
+							display: none
 							padding-left: 0
 							li
 								padding: 17px 0
@@ -143,7 +187,11 @@ header
 										img
 											margin-right: 10px
 											display: block
-											font-size:
+						&.active
+							.accordion-title
+								em
+									&::after
+										content: '\e15b'
 			.download-app
 				margin-bottom: 24px
 				p
