--- a/src/components/home/h-2/h-2.pug
+++ b/src/components/home/h-2/h-2.pug
@@ -4,17 +4,35 @@ section.section.card-hdbank(setBackground="./images/bg-1.png")
 		.single-swiper.desktop 
 			.swiper-container 
 				.swiper-wrapper 
-					-for(i=1; i<4; i++)
-						.swiper-slide 
-							.slide-inner 
-								.img-card 
-									img(src="./images/card-"+i+".png", alt="")
-								.title-card 
-									a(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
-								a.btn.btn-open-card(href="") Mở thẻ
+					.swiper-slide 
+						.slide-inner.small-img
+							.img-card 
+								img(src="./images/card-1.png", alt="")
+							.title-card 
+								a.title(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+								a.btn.btn-login(href="") 
+									span Mở thẻ
+					.swiper-slide 
+						.slide-inner 
+							.img-card 
+								img(src="./images/card-2.png", alt="")
+								.icon 
+									img(src="./images/repay.png", alt="")
+							.title-card 
+								a.title(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+								a.btn.btn-login(href="") 
+									span Mở thẻ
+					.swiper-slide 
+						.slide-inner 
+							.img-card 
+								img(src="./images/card-3.png", alt="")
+							.title-card 
+								a.title(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+								a.btn.btn-login(href="") 
+									span Mở thẻ
 			.swiper-button-next 
 			.swiper-button-prev
-			a.btn.btn-view-all(href="") Xem tất cả thẻ
+			a.btn-view-all(href="") Xem tất cả thẻ
 		.slider-card.hidden
 			.single-slide
 				a(href="") Thẻ tín dụng 
@@ -26,8 +44,21 @@ section.section.card-hdbank(setBackground="./images/bg-1.png")
 									.img-card 
 										img(src="./images/card-"+i+".png", alt="")
 									.title-card 
-										a(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
-									a.btn.btn-open-card(href="") Mở thẻ
+										a.title(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+										a.btn.btn-login(href="")
+											span Mở thẻ
+			.single-slide
+				a(href="") Thẻ tín dụng 
+				.swiper-container
+					.swiper-wrapper 
+						-for(i=1; i<4; i++)
+							.swiper-slide 
+								.slide-inner 
+									.img-card 
+										img(src="./images/card-"+i+".png", alt="")
+									.title-card 
+										a.title(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+										a.btn.btn-login(href="") Mở thẻ
 			.single-slide
 				a(href="") Thẻ tín dụng 
 				.swiper-container
@@ -39,16 +70,4 @@ section.section.card-hdbank(setBackground="./images/bg-1.png")
 										img(src="./images/card-"+i+".png", alt="")
 									.title-card 
 										a(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
-									a.btn.btn-open-card(href="") Mở thẻ
-			.single-slide
-				a(href="") Thẻ tín dụng 
-				.swiper-container
-					.swiper-wrapper 
-						-for(i=1; i<4; i++)
-							.swiper-slide 
-								.slide-inner 
-									.img-card 
-										img(src="./images/card-"+i+".png", alt="")
-									.title-card 
-										a(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
-									a.btn.btn-open-card(href="") Mở thẻ
+									a.btn.btn-login(href="") Mở thẻ
