--- a/src/components/home/h-2/h-2.sass
+++ b/src/components/home/h-2/h-2.sass
@@ -3,8 +3,8 @@
 		position: relative
 		.slide-inner
 			padding: 24px
-			width: 394px
-			min-height: 536px
+			max-width: 394px
+			min-height: 570px
 			background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15))
 			border: 1px solid rgba(255, 255, 255, 0.35)
 			box-sizing: border-box
@@ -14,5 +14,75 @@
 			flex-direction: column
 			justify-content: center
 			align-items: center
+			.img-card
+				position: relative
+				.icon
+					position: absolute
+					top: -16px
+					right: -16px
 			.title-card
+				display: flex
+				flex-direction: column
+				justify-content: center
+				align-items: center
 				margin-top: 16px
+				padding: 0 30px
+
+				.title
+					font-weight: 500
+					font-size: 18px
+					line-height: 26px
+					text-align: center
+					color: $white
+				.btn-login
+					width: 120px
+					height: 42px
+					padding: 0 !important
+					display: flex
+					align-items: center
+					justify-content: center
+					span
+						font-weight: bold
+						font-size: 18px
+						line-height: 26px
+						color: $black
+					&:hover
+						span
+							color: $white
+						&::after
+							right: 8px
+			&.small-img
+				justify-content: space-between
+				padding-top: 30%
+	.btn-view-all
+		display: flex
+		flex-direction: row
+		justify-content: flex-start
+		align-items: center
+		padding: 8px 12px 8px 16px
+		width: 174px
+		height: 40px
+		border: 1px solid #FFFFFF
+		box-sizing: border-box
+		border-radius: 50px
+		font-size: 16px
+		line-height: 23px
+		color: $white
+		position: relative
+		margin: 32px auto
+		transition: all ease-in-out .5s
+		&::after
+			position: absolute
+			top: 50%
+			right: 18px
+			transform: translateY(-50%) rotate(0deg)
+			content: "\e87a"
+			font-family: Linearicons-Free
+			font-size: r(18px)
+			font-weight: 700
+			transition: all ease-in-out .3s
+		&:hover
+			background: $white
+			color: #000
+			&::after
+				transform: translateY(-50%) rotate(-22.5deg)
