--- a/src/components/home/h-2/h-2.pug
+++ b/src/components/home/h-2/h-2.pug
@@ -7,15 +7,8 @@ section.section.card-hdbank(setBackground="./images/bg-1.png")
 					.swiper-slide 
 						.slide-inner.small-img
 							.img-card 
-								img(src="./images/card-1.png", alt="")
-							.title-card 
-								a.title(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
-								a.btn.btn-login(href="") 
-									span Mở thẻ
-					.swiper-slide 
-						.slide-inner 
-							.img-card 
-								img(src="./images/card-2.png", alt="")
+								a(href="") 
+									img(src="./images/card-1.png", alt="")
 								.icon 
 									img(src="./images/repay.png", alt="")
 							.title-card 
@@ -25,7 +18,19 @@ section.section.card-hdbank(setBackground="./images/bg-1.png")
 					.swiper-slide 
 						.slide-inner 
 							.img-card 
-								img(src="./images/card-3.png", alt="")
+								a(href="") 
+									img(src="./images/card-2.png", alt="")
+								.icon 
+									img(src="./images/repay.png", alt="")
+							.title-card 
+								a.title(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
+								a.btn.btn-login(href="") 
+									span Mở thẻ
+					.swiper-slide 
+						.slide-inner 
+							.img-card 
+								a(href="") 
+									img(src="./images/card-3.png", alt="")
 							.title-card 
 								a.title(href="") Petrolimex ID 4in1 Tín dụng | Ghi nợ | Trả trước 
 								a.btn.btn-login(href="") 
