--- a/src/components/home/h-4/h-4.pug
+++ b/src/components/home/h-4/h-4.pug
@@ -9,7 +9,7 @@ section.section.comparny#sec-4
 							-for(i=1; i<6; i++)
 								.swiper-slide
 									.img 
-										img(src="./images/customer-"+i+".png", alt="")
+										img(src="./images/compartny-"+i+".png", alt="")
 									.wrapper-content 
 										.desc 
 											a(href="") eCMB - Bộ công cụ số toàn diện dành cho doanh nghiệp
