--- a/src/components/home/h-4/h-4.sass
+++ b/src/components/home/h-4/h-4.sass
@@ -1,43 +1,3 @@
-.design-sec
-	position: relative
-	padding: 0
-	min-height: 850px
-	@media screen and ( max-width: 768px )
-		min-height: 600px
-	@media screen and ( max-width: 568px )
-		min-height: 450px
-	&::after
-		position: absolute
-		width: 100%
-		height: 100%
-		top: 0
-		left: 0
-		content: ''
-		z-index: 1
-		background-color: rgba(255, 255, 255, 0.85)
-	.sec-title
+.comparny
+	.big-image
 		position: relative
-		z-index: 2
-	.image-center
-		position: absolute
-		bottom: 0
-		left: 0
-		width: 100%
-		z-index: 2
-		.big-image
-			position: absolute
-			bottom: 0
-			left: 50%
-			transform: translateX(-50%)
-			+img-scale(.3)
-			@media screen and ( max-width: 1024px )
-				+img-scale(.5)
-			@media screen and ( max-width: 768px )
-				+img-scale(.6)
-		.small-iamge
-			position: absolute
-			bottom: -60px
-			left: 58%
-			@media screen and ( max-width: 1024px )
-				img
-					width: 70%
