--- a/src/components/home/h-4/h-4.sass
+++ b/src/components/home/h-4/h-4.sass
@@ -1,3 +1,129 @@
 .comparny
-	.big-image
+	.comparny-image
 		position: relative
+		.slide-inner
+			position: relative
+			.img
+				a
+					+img-ratio(487/885)
+					border-radius: 20px
+					&::before
+						position: absolute
+						top: 0
+						left: 0
+						width: 100%
+						height: 100%
+						content: ''
+						z-index: 2
+						background: linear-gradient(360deg, rgba(0, 0, 0, 0.75) 8.88%, rgba(0, 0, 0, 0) 63.45%), url(.jpg)
+			.wrapper-content
+				position: absolute
+				padding: 0 24px
+				bottom: 58px
+				left: 0
+				z-index: 9
+				.desc
+					a
+						font-weight: 700
+						font-size: r(23px)
+					p
+						font-size: r(18px)
+						line-height: 26px
+						margin-bottom: 0
+					a,
+					p
+						color: $white
+					@media screen and ( max-width: 1366px )
+						a
+							font-size: r(20px)
+						p
+							font-size: r(14px)
+		.swiper-pagination
+			&-bullet
+				background: $white
+	.wrap-content
+		position: relative
+		padding: 16px 24px
+		background: $gradient
+		box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.07)
+		border-radius: 20px
+		display: flex
+		flex-direction: column
+		justify-content: center
+
+		.content
+			p
+				font-weight: bold
+				font-size: r(22px)
+				color: #FFFFFF
+				margin-bottom: 0
+				span
+					font-weight: 800
+					font-size: r(28px)
+					line-height: 41px
+		.btn-log
+			position: relative
+			display: flex
+			flex-direction: row
+			justify-content: center
+			align-items: center
+			padding: 8px 16px 8px 16px
+			width: 117px
+			height: 40px
+			margin-top: 19px
+			background: #FFD643
+			border-radius: 50px
+			transition: all ease-in-out .3s
+
+			span
+				position: relative
+				font-weight: bold
+				font-size: 14px
+				line-height: 20px
+				color: $black
+				transition: all ease-in-out .3s
+			&::before
+				content: '\f1df'
+				font-family: Material icons
+				font-size: r(14px)
+				padding-top: 3px
+				padding-right: 10px
+				font-weight: 400
+				color: $black
+				transition: all ease-in-out .3s
+
+			&:hover
+				background: $main
+				span,
+				&::before
+					color: $white
+				span
+					transform: translateX(-26px)
+				&::before
+					transform: translateX(60px)
+
+		&_big
+			background-image: url('../images/icons/bg-icon.png')
+			background-repeat: no-repeat
+			height: 100%
+			align-items: flex-start
+
+		&_small
+			height: 100%
+			align-items: center
+		@media screen and ( max-width: 1366px )
+			padding: 16px
+			.content
+				p
+					font-size: r(18px)
+	.row
+		.col-lg-4
+			.row
+				height: 100%
+				.col-lg-12,
+				.col-lg-6
+					height: 50%
+				.col-lg-12
+					padding-bottom: 15px
+				.col-lg-6
+					padding-top: 15px
