--- a/src/components/home/h-4/h-4.sass
+++ b/src/components/home/h-4/h-4.sass
@@ -127,3 +127,12 @@
 					padding-bottom: 15px
 				.col-lg-6
 					padding-top: 15px
+	.list-item
+		padding: 43px 30px
+		align-items: center
+		justify-content: space-between
+		.item
+			a
+				display: block
+				width: 84px
+				height: 84px
